--- a/examples/angular/sample-app/src/app/app.component.html
+++ b/examples/angular/sample-app/src/app/app.component.html
@@ -9,8 +9,8 @@
 
 <style>
   :host {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
-      'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 14px;
     color: #333;
     box-sizing: border-box;
