--- a/examples/symfony/sample/templates/base.html.twig
+++ b/examples/symfony/sample/templates/base.html.twig
@@ -4,7 +4,17 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        {# Pass RudderStack configuration to JavaScript #}
+        <script>
+            window.RUDDERSTACK_WRITE_KEY = "{{ rudderstack_write_key|default('') }}";
+            window.RUDDERSTACK_DATAPLANE_URL = "{{ rudderstack_dataplane_url|default('') }}";
+        </script>
+        
+        {# Bootstrap CSS for styling #}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -15,5 +25,8 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        
+        {# Bootstrap JS bundle #}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
